--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+beautifulsoup4==4.6.0
+bs4==0.0.1
 decorator==4.0.11
+html5lib==0.999999999
 ipython==6.0.0
 ipython-genutils==0.2.0
 jedi==0.10.2
+lxml==3.7.3
 nltk==3.2.2
 numpy==1.12.1
 pandas==0.19.2
@@ -13,6 +17,7 @@ ptyprocess==0.5.1
 Pygments==2.2.0
 python-dateutil==2.6.0
 pytz==2017.2
+requests==2.14.2
 scikit-learn==0.18.1
 scipy==0.19.0
 simplegeneric==0.8.1
@@ -21,3 +26,4 @@ sklearn==0.0
 SQLAlchemy==1.1.9
 traitlets==4.3.2
 wcwidth==0.1.7
+webencodings==0.5.1
