--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+alembic==0.9.2
+aniso8601==1.2.1
 beautifulsoup4==4.6.0
+blinker==1.4
 bs4==0.0.1
+click==6.7
 decorator==4.0.11
+Flask==0.12.2
+flask-marshmallow==0.8.0
+Flask-Migrate==2.0.3
+Flask-RESTful==0.3.6
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
 html5lib==0.999999999
 ipython==6.0.0
 ipython-genutils==0.2.0
+itsdangerous==0.24
 jedi==0.10.2
+Jinja2==2.9.6
 lxml==3.7.3
+Mako==1.0.6
+MarkupSafe==1.0
+marshmallow==2.13.5
+marshmallow-sqlalchemy==0.13.1
 nltk==3.2.2
 numpy==1.12.1
 pandas==0.19.2
@@ -16,6 +33,7 @@ prompt-toolkit==1.0.14
 ptyprocess==0.5.1
 Pygments==2.2.0
 python-dateutil==2.6.0
+python-editor==1.0.3
 pytz==2017.2
 requests==2.14.2
 scikit-learn==0.18.1
@@ -23,7 +41,8 @@ scipy==0.19.0
 simplegeneric==0.8.1
 six==1.10.0
 sklearn==0.0
-SQLAlchemy==1.1.9
+SQLAlchemy==1.1.10
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.12.2
