--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bs4==0.0.1
 click==6.7
 decorator==4.0.11
 Flask==0.12.2
+Flask-DebugToolbar==0.10.1
 flask-marshmallow==0.8.0
 Flask-Migrate==2.0.3
 Flask-RESTful==0.3.6
