Add views for login and logout

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ click==6.7
 decorator==4.0.11
 Flask==0.12.2
 Flask-DebugToolbar==0.10.1
+Flask-Login==0.4.0
 flask-marshmallow==0.8.0
 Flask-Migrate==2.0.3
 Flask-RESTful==0.3.6
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
+Flask-WTF==0.14.2
 html5lib==0.999999999
 ipython==6.0.0
 ipython-genutils==0.2.0
@@ -47,3 +49,4 @@ traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.12.2
+WTForms==2.1
