--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 alembic==0.9.2
-aniso8601==1.2.1
+aniso8601==1.3.0
 beautifulsoup4==4.6.0
 blinker==1.4
-bs4==0.0.1
+certifi==2017.7.27.1
+chardet==3.0.4
 click==6.7
-decorator==4.0.11
+dominate==2.3.1
 Flask==0.12.2
+Flask-Admin==1.5.0
+Flask-Bootstrap==3.3.7.1
 Flask-DebugToolbar==0.10.1
+Flask-HTTPAuth==3.2.3
 Flask-Login==0.4.0
+Flask-Mail==0.9.1
 flask-marshmallow==0.8.0
 Flask-Migrate==2.0.3
 Flask-RESTful==0.3.6
@@ -15,38 +20,26 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
 Flask-WTF==0.14.2
-html5lib==0.999999999
-ipython==6.0.0
-ipython-genutils==0.2.0
+idna==2.6
 itsdangerous==0.24
-jedi==0.10.2
 Jinja2==2.9.6
-lxml==3.7.3
-Mako==1.0.6
+Mako==1.0.7
 MarkupSafe==1.0
 marshmallow==2.13.5
 marshmallow-sqlalchemy==0.13.1
-nltk==3.2.2
-numpy==1.12.1
-pandas==0.19.2
-pexpect==4.2.1
-pickleshare==0.7.4
+nltk==3.2.4
+numpy==1.13.1
 pkg-resources==0.0.0
-prompt-toolkit==1.0.14
-ptyprocess==0.5.1
-Pygments==2.2.0
+psycopg2==2.7.3.1
 python-dateutil==2.6.0
 python-editor==1.0.3
 pytz==2017.2
-requests==2.14.2
+requests==2.18.4
 scikit-learn==0.18.1
 scipy==0.19.0
-simplegeneric==0.8.1
 six==1.10.0
-sklearn==0.0
-SQLAlchemy==1.1.10
-traitlets==4.3.2
-wcwidth==0.1.7
-webencodings==0.5.1
+SQLAlchemy==1.1.13
+urllib3==1.22
+visitor==0.1.3
 Werkzeug==0.12.2
 WTForms==2.1
